parser/tests/snapshots/parser__garbage_doc_3.snap
---
created: "2019-08-18T08:45:29.377749Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: "format!(\"{}\" , e)"
---
Error: 0: at line 1, in Eof:
{}
^


