parser/tests/snapshots/parser__garbage_hex_value_4.snap
---
created: "2019-08-18T09:05:10.905813Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: "format!(\"{}\" , e)"
---
Error: 0: at line 1:
a: #fffffff
          ^
expected '\n', found f


