parser/tests/snapshots/parser__garbage_rgba_value_2.snap
---
created: "2019-08-19T02:58:52.421689Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: "format!(\"{}\" , e)"
---
Error: 0: at line 0:
$a: rgba0, 127, 255, 0.5)
    ^
expected '(', found r

1: at line 0, in ColorSet:
$a: rgba0, 127, 255, 0.5)
    ^

2: at line 0, in Variable:
$a: rgba0, 127, 255, 0.5)
^


