parser/tests/snapshots/parser__variable_only.snap
---
created: "2019-08-18T07:22:12.680673Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Variable(
            Declaration {
                identifier: "var",
                value: Color(
                    Color {
                        r: 255,
                        g: 0,
                        b: 255,
                        a: 1.0,
                    },
                ),
            },
        ),
    ],
}
